# cof_dpm

./: .gitignore  Cargo.toml  buf.yaml  docker-compose.yaml  flake.nix  rust-toolchain.toml  taplo.toml
.github/workflows/: buf-ci.yaml
.sqlx/: query-4fe7d4a68ddef3fc597565f75ac8ad9dc11f7c006491fd7a3d2be4b861131b69.json
cof/: Cargo.toml  build.rs
cof/src/: lib.rs
cof/src/model/dice/: dice_set.rs  dice_type.rs  mod.rs  protobuf.rs
cof/src/services/: dice.rs
cof/src/services/dice/: implem.rs  service.rs
cof/src/services/dice/implem/: grpc.rs  in_memory.rs  mod.rs  noop.rs  opentelemetry.rs
cof/src/services/dice/implem/postgres/: mod.rs
cof/src/services/dice/implem/postgres/migrations/: 20250619071519_schema.down.sql  20250619071519_schema.up.sql
dice_server/: Cargo.toml
dice_server/src/: main.rs  postgres_repo.rs  telemetry.rs
proto/cof/common/dice/v1/: dice.proto
proto/cof/dice_api/v1/: service.proto
