[workspace]
resolver = "3"
members = ["cof", "dice_server"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 1 }

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["env"] }
cof = { path = "./cof" }
log = "0.4.27"
opentelemetry = "0.30.0"
prost = "0.13.4"
sqlx = { version = "0.8.6" }
thiserror = "2.0.11"
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.13.0", default-features = false, features = [
  "codegen",
  "prost",
] }
tonic-build = { version = "0.13.0", default-features = false, features = [
  "prost",
] }

[workspace.metadata.crane]
name = "cof-dpm-workspace"
